--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+.development/
+appsettings*.json
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
