--- a/Infrastructure/MaccabiSearch.Infrastructure.Services.Implementations/MaccabiSearch.Infrastructure.Services.Implementations.csproj
+++ b/Infrastructure/MaccabiSearch.Infrastructure.Services.Implementations/MaccabiSearch.Infrastructure.Services.Implementations.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\MaccabiSearch.Common.Services\MaccabiSearch.Common.Services.csproj" />
+    <ProjectReference Include="..\..\Domain\MaccabiSearch.Domain.Models\MaccabiSearch.Domain.Models.csproj" />
     <ProjectReference Include="..\MaccabiSearch.Infrastructure.Services\MaccabiSearch.Infrastructure.Services.csproj" />
   </ItemGroup>
 
