--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,6 +10,12 @@ services:
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
     environment:
       - ConnectionStrings__MaccabiSearchDB="Host=maccabisearch.database;Post=5432;Database=maccabisearch;Username=postgres;Password=postgres;Include Error Detail=true"
+      - Search__PageSize=5
+      - Search__PageNumber=1
+      - GoogleSearchEngine__Id=PLEASE_INSERT_HERE_THE_GOOGLE_SEARCH_ENGINE_ID 
+      - GoogleSearchEngine__ApiKey=PLEASE_INSERT_HERE_THE_GOOGLE_SEARCH_ENGINE_ID
+      - GoogleSearchEngine__Endpoint__Search__BaseUrl=https://www.googleapis.com
+      - GoogleSearchEngine__Endpoint__Search__Template=customsearch/v1/?key={0}&cx={1}&q={{0}}&num={{1}}&start={{2}}
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=5000
       - ASPNETCORE_HTTPS_PORTS=5001
