--- a/Application/MaccabiSearch.Application.Services.Implementations/MaccabiSearch.Application.Services.Implementations.csproj
+++ b/Application/MaccabiSearch.Application.Services.Implementations/MaccabiSearch.Application.Services.Implementations.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Common\MaccabiSearch.Common.Services\MaccabiSearch.Common.Services.csproj" />
     <ProjectReference Include="..\..\Domain\MaccabiSearch.Domain.Models\MaccabiSearch.Domain.Models.csproj" />
+    <ProjectReference Include="..\..\Domain\MaccabiSearch.Domain.Services\MaccabiSearch.Domain.Services.csproj" />
     <ProjectReference Include="..\..\Infrastructure\MaccabiSearch.Infrastructure.Services\MaccabiSearch.Infrastructure.Services.csproj" />
     <ProjectReference Include="..\MaccabiSearch.Application.Services\MaccabiSearch.Application.Services.csproj" />
   </ItemGroup>
