--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: MaccabiSearch.Api/Dockerfile
+    depends_on:
+      - maccabisearch.database
     networks:
       - db-network
       - api-network
@@ -26,6 +28,11 @@ services:
       - maccabisearch.database
     networks:
       - db-network
+
+  maccabisearch.redis:
+    image: redis:latest
+    networks:
+      - api-network
 
 networks:
     api-network:
