--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
 
   maccabisearch.redis:
     image: redis:latest
+    container_name: maccabisearch.redis
     networks:
       - api-network
 
